# Ai-Career-Mentor

./: .env.example  .gitignore  .replit  DEFINITION_OF_DONE.md  MANUAL_TEST_CHECKLIST.md  Makefile  README.md  SECURITY_CHECKLIST.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  run.sh  vite.config.ts
.migration-backup/: .env.example  playwright.config.ts
ai_service/: .env.example  Dockerfile  mypy.ini  pytest.ini  requirements.txt
attached_assets/: Pasted--AI-Career-Mentor-FRONTEND-Build-Prompt-Free-Tier-Stack_1782187834497.txt  Pasted--AI-Career-Mentor-Production-Grade-Master-Prompt-Self-I_1782798922735.txt  Pasted--Engineering-discipline-read-this-before-writing-any-co_1782309995164.txt  Pasted--Signal-to-auto-create-profile-on-user-creation-from-dj_1782800408428.txt  Pasted--github-workflows-ci-yml-name-CI-on-push-branches-pull-_1782359263328.txt  Pasted-1-5-3-Specific-Rule-Never-Silently-Swallow-Exceptions-A_1782913426637.txt  Pasted-1-5-Anti-Vibe-Coding-Discipline-Required-for-Every-Edit_1782911800278.txt  Pasted-1-5-Anti-Vibe-Coding-Discipline-Required-for-Every-Edit_1782912721299.txt  Pasted-1-5-Anti-Vibe-Coding-Discipline-Required-for-Every-Edit_1782912779628.txt  Pasted-11-CI-CD-Same-shape-as-the-original-spec-s-ci-yml-lint-_1782311317360.txt  Pasted-2-2-2-Frontend-Profile-UI-The-profile-section-must-incl_1782800661575.txt  Pasted-2-2-Career-Path-Explorer-Must-Be-Derived-From-This-User_1782915904564.txt  Pasted-2-3-Job-Matches-Must-Score-Against-Real-Job-Data-Not-a-_1782916169429.txt  Pasted-2-4-Interview-Questions-Must-Be-Role-and-Resume-Specifi_1782917071451.txt  Pasted-2-5-Skill-Builder-Must-Track-Real-Progress-Not-Reset-Ev_1782918206037.txt  Pasted-2-7-Architecture-Upgrade-Replace-the-Single-AI-Service-_1782919054892.txt  Pasted-2-Free-Tier-Swap-Reference-Concern-Original-paid-This-b_1782310311593.txt  Pasted-4-Security-Checklist-Integration-Specific-Work-through-_1782710387779.txt  Pasted-5-Repository-Structure-backend-only-backend-config-sett_1782310726258.txt  Pasted-8-Dependencies-backend-requirements-base-txt-Django-5-0_1782311235612.txt  Pasted-AI-Career-Mentor-Dummy-to-Real-Production-Repair-Prompt_1782910863676.txt  Pasted-AI-Career-Mentor-Full-Stack-Integration-Prompt-Purpose-_1782359314946.txt  Pasted-AI-Career-Mentor-Production-Grade-Master-Prompt-Self-In_1782799087854.txt  Pasted-AI-SERVICE-URL-points-to-http-ai-service-8001-Docker-se_1782376629387.txt  Pasted-Answer-evaluation-fix-if-mock-interview-answer-scoring-_1782917767060.txt  Pasted-Backend-fix-pattern-apply-only-if-the-current-code-devi_1782913736331.txt  Pasted-Backend-fix-pattern-apply-only-if-the-current-code-devi_1782914440557.txt  Pasted-Backend-fix-pattern-python-ai-service-services-career-p_1782915652712.txt  Pasted-Backend-fix-pattern-python-backend-apps-chat-context-bu_1782918874175.txt  Pasted-Desktop-1024px-Left-sidebar-navigation-240px-fixed-Main_1782800771104.txt  (+16 more)
backend/: .env.example  Dockerfile  db.sqlite3  entrypoint.sh  (+3 more)
(+252 files in other folders)
