[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cloudinary>=1.44.2",
    "django>=5.2.15",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "fastapi>=0.138.0",
    "gunicorn>=22.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langfuse>=4.11.0",
    "langgraph>=1.2.6",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sentry-sdk>=2.3.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
    "whitenoise>=6.6.0",
]
