[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "celery==5.4.0",
    "cloudinary==1.40.0",
    "django==5.0.6",
    "django-cors-headers==4.3.1",
    "django-environ==0.11.2",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.27.2",
    "fastapi==0.111.0",
    "google-genai>=1.2.0",
    "google-generativeai==0.5.4",
    "gunicorn==22.0.0",
    "httpx==0.27.0",
    "langchain==0.2.1",
    "langchain-google-genai==1.0.6",
    "langgraph==0.0.55",
    "pgvector==0.2.5",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.0",
    "pydantic-settings==2.2.1",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "python-multipart==0.0.9",
    "redis==5.0.4",
    "sentry-sdk==2.8.0",
    "sqlalchemy[asyncio]==2.0.30",
    "tenacity==8.3.0",
    "uvicorn[standard]==0.29.0",
    "whitenoise==6.6.0",
]
